--- a/src/portal/src/i18n/lang/pt-br-lang.json
+++ b/src/portal/src/i18n/lang/pt-br-lang.json
@@ -178,7 +178,7 @@
         "CREATED_SUCCESS": "Projeto criado com sucesso.",
         "DELETED_SUCCESS": "Projeto removido com sucesso.",
         "TOGGLED_SUCCESS": "Projeto alterado com sucesso.",
-        "FAILED_TO_DELETE_PROJECT": "Projeto contém repositórios ou regras de replicação que não podem ser removidos.",
+        "FAILED_TO_DELETE_PROJECT": "Project contains repositories or replication rules or helm-charts cannot be deleted.",
         "INLINE_HELP_PUBLIC": "Quando um projeto é marcado como público, qualquer um tem permissões de leitura aos repositórios desse projeto, e o usuário não precisa executar \"docker login\" antes de baixar imagens desse projeto.",
         "OF": "de"
     },
