--- a/src/portal/src/i18n/lang/zh-cn-lang.json
+++ b/src/portal/src/i18n/lang/zh-cn-lang.json
@@ -851,5 +851,11 @@
         "MSG_SUCCESS": "垃圾回收成功",
         "MSG_SCHEDULE_SET": "垃圾回收定时任务设置成功",
         "MSG_SCHEDULE_RESET": "垃圾回收定时任务已被重置"
+    },
+    "RETAG": {
+        "MSG_SUCCESS": "复制成功",
+        "TIP_REPO": "镜像仓库名被分解为路径组件。仓库名必须至少有一个小写字母、字母数字字符，可选句点、破折号或下划线分隔。严格意义上说，它必须匹配正则表达式[a-z0-9]+(?[.-][a-z0-9]+)*.如果仓库名有两个或多个路径组件，则它们必须用正斜杠('/')分隔。包括斜杠在内的仓库名的总长度必须小于256个字符。",
+        "TIP_TAG": "标签是应用于存储库中的Docker映像的一种标签，它用于区分多种镜像。它需要匹配Regex：([\\w][\\w.-]{0,127})"
     }
+
 }
