--- a/src/portal/src/i18n/lang/zh-cn-lang.json
+++ b/src/portal/src/i18n/lang/zh-cn-lang.json
@@ -219,6 +219,7 @@
         "ROLE": "角色",
         "SYS_ADMIN": "系统管理员",
         "PROJECT_ADMIN": "项目管理员",
+        "PROJECT_MASTER": "维护人员",
         "DEVELOPER": "开发人员",
         "GUEST": "访客",
         "DELETE": "删除",
