--- a/src/portal/src/i18n/lang/pt-br-lang.json
+++ b/src/portal/src/i18n/lang/pt-br-lang.json
@@ -456,22 +456,25 @@
     },
     "DESTINATION": {
         "NEW_ENDPOINT": "Novo Endpoint",
+        "PROVIDER": "Provider",
         "ENDPOINT": "Endpoint",
-        "NAME": "Nome do Endpoint",
+        "NAME": "Nome",
         "NAME_IS_REQUIRED": "Nome do Endpoint é obrigatório.",
         "URL": "URL do Endpoint",
         "URL_IS_REQUIRED": "URL do Endpoint URL é obrigatória.",
-        "USERNAME": "Nome de usuário",
-        "PASSWORD": "Senha",
+        "AUTHENTICATION":"Autenticação",
+        "ACCESS_ID": "ID de acesso",
+        "ACCESS_SECRET": "Secreto de acceso",
+        "STATUS": "Segredo de acesso",
         "TEST_CONNECTION": "Testar Conexão",
         "TITLE_EDIT": "Editar Endpoint",
-        "TITLE_ADD": "Criar Endpoint",
+        "TITLE_ADD": "Novo ponto final do registro",
         "EDIT": "Editar",
         "DELETE": "Remover",
         "TESTING_CONNECTION": "Testando Conexão...",
         "TEST_CONNECTION_SUCCESS": "Conexão testada com sucesso.",
         "TEST_CONNECTION_FAILURE": "Falha ao pingar o endpoint.",
-        "CONFLICT_NAME": "Nome do Endpoint ou URL já existe.",
+        "CONFLICT_NAME": "O nome do terminal já existe.",
         "INVALID_NAME": "Nome do Endpoint inválido.",
         "FAILED_TO_GET_TARGET": "Falha ao obter endpoint.",
         "CREATION_TIME": "Data de criação",
