--- a/src/portal/src/i18n/lang/zh-cn-lang.json
+++ b/src/portal/src/i18n/lang/zh-cn-lang.json
@@ -666,6 +666,8 @@
             "LDAP_GROUP_GID_INFO": "LDAP组的GID,用于匹配用户的一个属性，可以是uid,cn或者其他属性",
             "LDAP_GROUP_ADMIN_DN": "LDAP组管理员DN",
             "LDAP_GROUP_ADMIN_DN_INFO": "LDAP组管理员DN，所有组内用户都会有管理员权限，此属性可以为空",
+            "LDAP_GROUP_MEMBERSHIP": "LDAP 组成员",
+            "LDAP_GROUP_MEMBERSHIP_INFO": "LDAP组成员的membership属性，默认为memberof, 在某些LDAP服务器会变为ismemberof",
             "GROUP_SCOPE": "LDAP组搜索范围",
             "GROUP_SCOPE_INFO": "搜索范围"
         },
