--- a/src/portal/src/i18n/lang/fr-fr-lang.json
+++ b/src/portal/src/i18n/lang/fr-fr-lang.json
@@ -617,9 +617,9 @@
             "SCANNING_POLICY": "Définissez la politique d'analyse des images en fonction des différentes exigences. 'Aucune' : pas de politique active; 'Tousles jours à' : déclenchement du balayage à l'heure spécifiée tous les jours.",
             "READONLY_TOOLTIP": "In read-only mode, you can not delete repositories or tags or push images. ",
             "GC_POLICY": "",
-            "HOURLY_CRON":"Run once an hour, beginning of hour",
-            "WEEKLY_CRON":"Run once a week, midnight between Sat/Sun",
-            "DAILY_CRON":"Run once a day, midnight"
+            "HOURLY_CRON":"Run once an hour, beginning of hour. Équivalent à 0 0 * * * *.",
+            "WEEKLY_CRON":"Run once a week, midnight between Sat/Sun. Équivalent à 0 0 0 * * 0.",
+            "DAILY_CRON":"Run once a day, midnight. Équivalent à 0 0 0 * * *."
         },
         "LDAP": {
             "URL": "URL LDAP",
@@ -848,7 +848,10 @@
         "NONE": "None",
         "DAILY": "Daily",
         "WEEKLY": "Weekly",
+        "HOURLY": "Hourly",
+        "CUSTOM": "Custom",
         "MANUAL": "Manual",
+        "CRON": "cron",
         "ON": "on",
         "AT": "at"
     },
